--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -5,11 +5,11 @@
     </div>
     <div class="row">
       <label>User Name</label>
-      <input type="text" name="username" #username="ngModel" ngModel>
+      <input type="text" name="username" #username="ngModel" ngModel required>
     </div>
     <div class="row">
       <label>Password</label>
-      <input type="text" name="password" #password="ngModel" ngModel>
+      <input type="text" name="password" #password="ngModel" ngModel required>
     </div>
     <div class="row">
       <button class="submit" type="submit">Submit</button>
